# smoke

./: .gitignore  Cargo.toml  LICENSE  README.md  dependencies.txt  plan.txt  stuff i want.txt
asset_manager/: Cargo.toml
asset_manager/src/: asset_loader.rs  asset_manager.rs  lib.rs
main/: Cargo.toml
main/src/: main.rs
run/: Cargo.toml
run/src/: main.rs
smoke_docs/.obsidian/: workspace.json
trick/: Cargo.toml  build.rs
trick/display/: Cargo.toml
trick/display/src/: lib.rs
trick/display/src/sdl3/: window.rs
trick/engine_lord/: Cargo.toml
trick/engine_lord/src/: lib.rs
trick/rendering_solver/: Cargo.toml
trick/rendering_solver/src/: lib.rs  renderer.rs  window.rs
trick/scene_manager/: Cargo.toml
trick/src/: engine.rs  lib.rs  renderer.rs  task_routine.rs  task_routine_prelude.rs  update_manager.rs
trick/src/renderer/: registry.rs  renderer.rs  shaders.rs  window.rs
trick/src/renderer/shaders/: colored_vertex.wgsl  sample.wgsl
trick/src/update_manager/: channel.rs  container.rs
trick/update_manager/: Cargo.toml
trick/update_manager/src/: lib.rs
trick/window_solver/: Cargo.toml
