[package]
name = "trick"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[lib]

[build-dependencies]
cmake = "0.1"
git2 = "0.19"

[dependencies]
anyhow = "1.0.100"
async-std = "1.13.2"
flume = "0.11.1"
raw-window-handle = "0.6.2"
sdl3 = {version = "0.15.1", features = ["raw-window-handle"]}
wgpu = "26.0.1"
