[package]
name = "trick"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[build-dependencies]
cmake = "0.1"
git2 = "0.20.2"

[dependencies]

asset_manager = { path = "../asset_manager" }

anyhow = "1.0.100"
arc-swap = "1.7.1"
async-std = "1.13.2"
flume = "0.11.1"
raw-window-handle = "0.6.2"
sdl3 = {version = "0.15.1", features = ["raw-window-handle"]}
wgpu = "27.0.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]

wgpu = { version = "27.0.0", features = ["webgl"]}

console_error_panic_hook = "0.1.6"
console_log = "1.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
  "Document",
  "Window",
  "Element",
]}
